# formula-metric-study

./: .gitignore  LICENSE  README.md  all_formulas.json  compute_llm_scores.py  compute_metrics.py  correlation_analysis.py  pyproject.toml
scorers/: cdm.py  text_similarity.py
